--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1>Healthcare Correlations</h1>
+        <h1 id="mainTitle">Healthcare Correlations</h1>
       </div>
     </div>
     <div class="row">
@@ -31,7 +31,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
@@ -48,7 +48,7 @@
             ultricies mi vitae est. Mauris placerat eleifend leo.</p>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <!-- Footer-->
